--- a/initial_exploration.Rmd
+++ b/initial_exploration.Rmd
@@ -239,5 +239,46 @@ my_map %>%
                   opacity = 0.9, bringToFront = TRUE))
 ```
 
+```{r}
+```
+
+
+```{r}
+hle_data <- list(
+  data = read_csv("data/clean_data/healthy_life_expectancy.csv"),
+  explorable_vars = c("reference_period", "sex"),
+  explorable_areas = c("health board", "local authority")
+)
+
+council_house_data <- list(
+  data = read_csv("data/clean_data/council_house_sales.csv"),
+  explorable_vars = c("year", "dwelling_type"),
+  explorable_areas = c("health board", "local authority")
+)
+```
+
+
+```{r}
+# selectable vars
+get_choices <- function(data_list) {
+  
+  choices = list()
+  for (var in data_list$explorable_vars) {
+    varname = enquo(var)
+    choices[[var]] = data_list$data %>% 
+      select(!!varname) %>% 
+      distinct() %>% 
+      pull()
+    sort(choices[[var]])
+  }
+  
+  return(choices)
+}
+
+
+
+get_choices(hle_data)
+```
+
 
 
