recode dynamic user interface

--- a/initial_exploration.Rmd
+++ b/initial_exploration.Rmd
@@ -280,5 +280,9 @@ get_choices <- function(data_list) {
 get_choices(hle_data)
 ```
 
+```{r}
+council_houses_better_vars %>% 
+  distinct(year)
+```
 
 
